Update index.html with Supabase tools and cloud sync info

--- a/index.html
+++ b/index.html
@@ -263,15 +263,51 @@
                 </ul>
                 <a href="luong-celebration-demo.html" class="launch-btn">🎉 View Demo</a>
             </div>
+
+            <!-- Supabase Test -->
+            <div class="app-card" style="border: 2px solid #28a745;">
+                <div class="app-icon">🧪</div>
+                <div class="app-title">Supabase Test</div>
+                <div class="app-description">
+                    Test your Supabase cloud database connection and create your user profile.
+                </div>
+                <ul class="app-features">
+                    <li>Test database connection</li>
+                    <li>Create/fix user profile</li>
+                    <li>Verify cloud sync setup</li>
+                    <li>Database operations testing</li>
+                </ul>
+                <a href="supabase-test.html" class="launch-btn" style="background: linear-gradient(135deg, #28a745 0%, #20873a 100%);">🔧 Test Supabase</a>
+            </div>
+
+            <!-- Task Migration -->
+            <div class="app-card" style="border: 2px solid #17a2b8;">
+                <div class="app-icon">📤</div>
+                <div class="app-title">Migrate to Cloud</div>
+                <div class="app-description">
+                    Upload your existing tasks from localStorage to Supabase cloud database.
+                </div>
+                <ul class="app-features">
+                    <li>Auto-load from localStorage</li>
+                    <li>Manual paste option</li>
+                    <li>Batch upload to cloud</li>
+                    <li>Task preview before upload</li>
+                </ul>
+                <a href="migrate-tasks-to-supabase.html" class="launch-btn" style="background: linear-gradient(135deg, #17a2b8 0%, #138496 100%);">☁️ Migrate Tasks</a>
+            </div>
         </div>
 
         <div class="footer">
             <p>
-                Built with ❤️ for productivity and learning | 
-                <a href="https://github.com" class="github-link">View on GitHub</a>
+                Built with ❤️ for productivity and learning |
+                <a href="https://github.com/luuamanda2-source/Test" class="github-link">View on GitHub</a>
             </p>
             <p style="margin-top: 10px; font-size: 0.9em;">
-                All apps work offline and store data locally in your browser
+                ☁️ <strong>NEW:</strong> Cloud sync with Supabase! Access your tasks from any device. |
+                <a href="QUICK-START-GUIDE.md" class="github-link">Quick Start Guide</a>
+            </p>
+            <p style="margin-top: 5px; font-size: 0.85em; color: #999;">
+                Local apps work offline and store data in your browser. Cloud apps sync across devices.
             </p>
         </div>
     </div>
