--- a/monthly-task-manager.html
+++ b/monthly-task-manager.html
@@ -542,7 +542,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📅 Monthly Task Manager</h1>
+            <h1>📅 Luong's Monthly Task Manager</h1>
             <div class="date-display" id="currentDate"></div>
         </div>
 
