Task Manager - Updated Security

--- a/enhanced-chinese-app.html
+++ b/enhanced-chinese-app.html
@@ -350,11 +350,16 @@
             margin-left: 10px;
         }
     </style>
+    <!-- Supabase Client Library -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Supabase Configuration -->
+    <script src="supabase-config.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <h1>🇨🇳 Enhanced Chinese Learning</h1>
+            <div id="authStatus" style="margin-top: 10px; font-size: 0.9em;"></div>
             <p>Master Pinyin, Vocabulary, and Grammar with Interactive Exercises</p>
         </div>
 
