--- a/monthly-task-manager.html
+++ b/monthly-task-manager.html
@@ -669,6 +669,8 @@
         </div>
     </div>
 
+    <!-- Supabase CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="supabase-config.js"></script>
     <script>
         // Global variables
