✨ Add MOS Cases Classifier tool and enhance Task Manager
- Added MOS Cases Classifier to productivity hub
  - Standalone HTML app for classifying MOS cases into 11 categories
  - 100% browser-based, works offline, zero dependencies
  - Integrated with dedicated page (mos-classifier.html)
  - Added to main dashboard with feature card

- Enhanced Monthly Task Manager
  - Redesigned button layout to horizontal, well-organized groups
  - Fixed daily task reset issue - tasks now properly reset each day
  - Added next due date/time display for recurring tasks
  - Implemented edit task functionality with modal dialog
  - Improved filtering to hide old completed daily tasks

- Project structure improvements
  - Created tools/ folder for better organization
  - Moved MOS Classifier to tools/mos-classifier/
  - Comprehensive documentation included

--- a/index.html
+++ b/index.html
@@ -237,6 +237,23 @@
                 <a href="enhanced-chinese-app.html" class="launch-btn">🎓 Start Learning</a>
             </div>
 
+            <!-- MOS Cases Classifier -->
+            <div class="app-card">
+                <div class="app-icon">🎯</div>
+                <div class="app-title">MOS Cases Classifier</div>
+                <div class="app-description">
+                    Automatically classify MOS (Manager on Site) cases into 11 predefined categories based on issue descriptions.
+                </div>
+                <ul class="app-features">
+                    <li>100% browser-based, no server needed</li>
+                    <li>Smart classification into 11 categories</li>
+                    <li>Drag & drop CSV file upload</li>
+                    <li>Visual statistics dashboard</li>
+                    <li>Works completely offline</li>
+                </ul>
+                <a href="mos-classifier.html" class="launch-btn">🚀 Launch Classifier</a>
+            </div>
+
             <!-- Backup Guide -->
             <div class="app-card">
                 <div class="app-icon">💾</div>
