🔄 Force GitHub Pages rebuild - Add timestamp comment

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <h1>🚀 Luong's Productivity Hub</h1>
             <p>Your personal collection of productivity and learning apps</p>
             <div id="authStatus" style="margin-top: 15px; font-size: 0.9em;"></div>
+            <!-- Updated: 2025-11-06 -->
         </div>
 
         <div class="apps-grid">
